Added page title

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <!-- Custom CSS Styles -->
     <link rel="stylesheet" href="css/style.css">
+	
+	<title>Management of Software Projects - Master's thesis by Beata Sirova</title>
 </head>
 <body ng-app="app" data-spy="scroll" data-offset="81" data-target="#fixed-navbar">
 
